[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/goat/main_scenes/DetailedInteraction.gd" type="Script" id=1]
[ext_resource path="res://addons/goat/main_scenes/InteractiveItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/goat/helper_scenes/RayCast3D.tscn" type="PackedScene" id=3]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( -1, -1, 0, -1, 1, 0, 1, 1, 0, -1, -1, 0, 1, 1, 0, 1, -1, 0 )

[node name="DetailedInteraction" type="Spatial"]
script = ExtResource( 1 )

[node name="InteractiveItem" parent="." instance=ExtResource( 2 )]

[node name="Backplate" type="StaticBody" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Backplate"]
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
near = 0.01

[node name="RayCast3D" parent="Camera" instance=ExtResource( 3 )]
cast_to = Vector3( 0, 0, -2 )
category = "interaction"
supports_alternative_interaction = false

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
